--- a/finalFormat.html
+++ b/finalFormat.html
@@ -1,222 +1,118 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Photo Press Check Requirements</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+    <title>PDF Export</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding: 0;
-            background: linear-gradient(to bottom right, #9c27b0, #e91e63, #f44336);
+            padding: 20px;
             min-height: 100vh;
+            background: linear-gradient(180deg, #6696ce, #00FFFF); 
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-sizing: border-box;
         }
         .container {
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        .card {
-            background-color: white;
-            border-radius: 8px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            overflow: hidden;
-            margin-bottom: 20px;
-        }
-        .card-content {
-            padding: 24px;
-        }
-        h1 {
-            text-align: center;
-            font-size: 2rem;
-            margin-bottom: 24px;
-            background: linear-gradient(to right, #2196f3, #673ab7);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-        }
-        .grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 24px;
-            margin-bottom: 24px;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
         }
         .image-card {
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-            overflow: hidden;
-            transition: all 0.3s ease;
-        }
-        .image-card:hover {
-            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-        }
-        .image-card-content {
-            padding: 16px;
+            border: 2px solid #ddd;
+            padding: 10px;
+            border-radius: 10px;
+            text-align: center;
+            flex: 1 1 45%;
+            max-width: 45%;
+            background-color: white;
         }
         .image-label {
-            display: flex;
-            align-items: center;
-            gap: 8px;
+            font-size: 14px;
             font-weight: bold;
-            font-size: 1.1rem;
-            margin-bottom: 12px;
-            color: #333;
-        }
-        .icon {
-            width: 24px;
-            height: 24px;
+            display: block;
+            margin-bottom: 10px;
         }
         .file-input {
             display: none;
         }
         .file-button {
-            display: block;
-            width: 100%;
-            padding: 10px;
-            background: linear-gradient(to right, #2196f3, #673ab7);
+            padding: 10px 15px;
+            background-color: #160857; 
             color: white;
-            text-align: center;
             border: none;
-            border-radius: 4px;
+            border-radius: 5px;
             cursor: pointer;
-            transition: all 0.3s ease;
+            font-weight: bold;
         }
         .file-button:hover {
-            background: linear-gradient(to right, #1976d2, #512da8);
-        }
-        .image-preview {
-            margin-top: 16px;
-            border: 4px solid #ce93d8;
-            border-radius: 8px;
-            overflow: hidden;
+            background-color: #B2E0FF; 
         }
         .image-preview img {
-            width: 100%;
-            height: auto;
-            display: block;
+            max-width: 100%;
+            border-radius: 5px;
         }
         .export-button {
+            margin-top: 20px;
+            padding: 15px 20px;
+            background-color: #000000; 
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
             display: block;
             width: 100%;
-            padding: 12px;
-            background: linear-gradient(to right, #4caf50, #2196f3);
-            color: white;
-            text-align: center;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 1.1rem;
+            max-width: 200px;
+            margin-left: auto;
+            margin-right: auto;
             font-weight: bold;
-            transition: all 0.3s ease;
         }
         .export-button:hover {
-            background: linear-gradient(to right, #45a049, #1e88e5);
-            transform: scale(1.05);
-        }
-        #exportLayout {
-            display: none;
-        }
-        #exportLayout .image-label {
-            font-size: 1.5rem;
-            margin-bottom: 30px;
-        }
-        #exportLayout #cadWithNeckLabelExport {
-            transform: scale(1.2);
-            transform-origin: top left;
+            background-color: #B2E0FF; 
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="card">
-            <div class="card-content">
-                <h1>Photo Press Check Requirements</h1>
-                <div id="photoLayout" class="grid">
-                    <div class="image-card">
-                        <div class="image-card-content">
-                            <label for="fullPhoto" class="image-label">
-                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M20.38 3.46L16 2a4 4 0 01-8 0L3.62 3.46a2 2 0 00-1.34 2.23l.58 3.47a1 1 0 00.99.84H6v10c0 1.1.9 2 2 2h8a2 2 0 002-2V10h2.15a1 1 0 00.99-.84l.58-3.47a2 2 0 00-1.34-2.23z"/>
-                                </svg>
-                                <span>1. FULL PHOTO OF GARMENT</span>
-                            </label>
-                            <input type="file" id="fullPhoto" class="file-input" accept="image/*">
-                            <button class="file-button" onclick="document.getElementById('fullPhoto').click()">Choose File</button>
-                            <div id="fullPhotoPreview" class="image-preview"></div>
-                        </div>
-                    </div>
-                    <div class="image-card">
-                        <div class="image-card-content">
-                            <label for="printLocation" class="image-label">
-                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M23 19a2 2 0 01-2 2H3a2 2 0 01-2-2V8a2 2 0 012-2h4l2-3h6l2 3h4a2 2 0 012 2z"/>
-                                    <circle cx="12" cy="13" r="4"/>
-                                </svg>
-                                <span>2. CLOSE UP OF EACH PRINT LOCATION</span>
-                            </label>
-                            <input type="file" id="printLocation" class="file-input" accept="image/*">
-                            <button class="file-button" onclick="document.getElementById('printLocation').click()">Choose File</button>
-                            <div id="printLocationPreview" class="image-preview"></div>
-                        </div>
-                    </div>
-                    <div class="image-card">
-                        <div class="image-card-content">
-                            <label for="neckLabel" class="image-label">
-                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M20.59 13.41l-7.17 7.17a2 2 0 01-2.83 0L2 12V2h10l8.59 8.59a2 2 0 010 2.82z"/>
-                                    <line x1="7" y1="7" x2="7.01" y2="7"/>
-                                </svg>
-                                <span>3. CLOSE UP OF NECK LABEL PRINT</span>
-                            </label>
-                            <input type="file" id="neckLabel" class="file-input" accept="image/*">
-                            <button class="file-button" onclick="document.getElementById('neckLabel').click()">Choose File</button>
-                            <div id="neckLabelPreview" class="image-preview"></div>
-                        </div>
-                    </div>
-                    <div class="image-card">
-                        <div class="image-card-content">
-                            <label for="cadWithNeckLabel" class="image-label">
-                                <svg class="icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M21 15v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4"/>
-                                    <polyline points="17 8 12 3 7 8"/>
-                                    <line x1="12" y1="3" x2="12" y2="15"/>
-                                </svg>
-                                <span>4. GTS CAD WITH NECK LABEL ART</span>
-                            </label>
-                            <input type="file" id="cadWithNeckLabel" class="file-input" accept="image/*">
-                            <button class="file-button" onclick="document.getElementById('cadWithNeckLabel').click()">Choose File</button>
-                            <div id="cadWithNeckLabelPreview" class="image-preview"></div>
-                        </div>
-                    </div>
-                </div>
-                <button class="export-button" onclick="exportToPDF()">Export to PDF</button>
+    <div id="content">
+        <div class="container">
+            <div class="image-card">
+                <label class="image-label" for="fullGarmentPhoto">
+                    <span>1. FULL PHOTO OF GARTMENT</span>
+                </label>
+                <input type="file" id="fullGarmentPhoto" class="file-input" accept="image/*">
+                <button class="file-button" onclick="document.getElementById('fullGarmentPhoto').click()">Choose File</button>
+                <div id="fullGarmentPhotoPreview" class="image-preview"></div>
+            </div>
+            <div class="image-card">
+                <label class="image-label" for="printCloseUp">
+                    <span>2. ZOOM PHOTO OF EACH PRINT LOCATION</span>
+                </label>
+                <input type="file" id="printCloseUp" class="file-input" accept="image/*">
+                <button class="file-button" onclick="document.getElementById('printCloseUp').click()">Choose File</button>
+                <div id="printCloseUpPreview" class="image-preview"></div>
+            </div>
+            <div class="image-card">
+                <label class="image-label" for="neckLabelCloseUp">
+                    <span>3. CLOSE UP NECK LABEL PRINT</span>
+                </label>
+                <input type="file" id="neckLabelCloseUp" class="file-input" accept="image/*">
+                <button class="file-button" onclick="document.getElementById('neckLabelCloseUp').click()">Choose File</button>
+                <div id="neckLabelCloseUpPreview" class="image-preview"></div>
+            </div>
+            <div class="image-card">
+                <label class="image-label" for="cadWithNeckLabel">
+                    <span>4.CAD ART INFORMATION</span>
+                </label>
+                <input type="file" id="cadWithNeckLabel" class="file-input" accept="image/*">
+                <button class="file-button" onclick="document.getElementById('cadWithNeckLabel').click()">Choose File</button>
+                <div id="cadWithNeckLabelPreview" class="image-preview"></div>
             </div>
         </div>
-    </div>
-
-    <div id="exportLayout" class="grid">
-        <div class="image-card">
-            <div class="image-card-content">
-                <div class="image-label">1. FULL PHOTO OF GARMENT</div>
-            </div>
-        </div>
-        <div class="image-card">
-            <div class="image-card-content">
-                <div class="image-label">2. CLOSE UP OF EACH PRINT LOCATION</div>
-            </div>
-        </div>
-        <div class="image-card">
-            <div class="image-card-content">
-                <div class="image-label">3. CLOSE UP OF NECK LABEL PRINT</div>
-            </div>
-        </div>
-        <div class="image-card">
-            <div class="image-card-content">
-                <div id="cadWithNeckLabelExport" class="image-label">4. GTS CAD WITH NECK LABEL ART</div>
-            </div>
-        </div>
+        <button class="export-button" onclick="exportToPDF()">Export to PDF</button>
     </div>
 
     <script>
@@ -237,18 +133,73 @@
             });
         });
 
-        function exportToPDF() {
-            const { jsPDF } = window.jspdf;
-            const input = document.getElementById('exportLayout');
-            html2canvas(input, { scale: 2 }).then((canvas) => {
-                const imgData = canvas.toDataURL('image/png');
-                const pdf = new jsPDF();
-                const imgProps = pdf.getImageProperties(imgData);
-                const pdfWidth = pdf.internal.pageSize.getWidth();
-                const pdfHeight = (imgProps.height * pdfWidth) / imgProps.width;
-                pdf.addImage(imgData, 'PNG', 0, 0, pdfWidth, pdfHeight);
-                pdf.save("photo_press_check.pdf");
+        function hideButtons() {
+            document.querySelectorAll('.file-button, .export-button').forEach(button => {
+                button.style.display = 'none';
             });
+        }
+
+        function showButtons() {
+            document.querySelectorAll('.file-button, .export-button').forEach(button => {
+                button.style.display = 'block';
+            });
+        }
+
+        function exportToPDF() {
+            hideButtons();
+
+            const { jsPDF } = window.jspdf;
+            const pdf = new jsPDF({
+                orientation: 'landscape',
+                unit: 'mm',
+                format: 'a4'
+            });
+
+            const pageWidth = pdf.internal.pageSize.getWidth();
+            const pageHeight = pdf.internal.pageSize.getHeight();
+            const margin = 10;
+            const usableWidth = pageWidth - 2 * margin;
+            const usableHeight = pageHeight - 2 * margin;
+
+            const imageCards = document.querySelectorAll('.image-card');
+            const images = Array.from(imageCards).map(card => ({
+                title: card.querySelector('.image-label span').textContent,
+                img: card.querySelector('.image-preview img')
+            })).filter(item => item.img);
+
+            if (images.length !== 4) {
+                alert('Please upload all 4 images before exporting.');
+                showButtons();
+                return;
+            }
+
+            // Calculate and adjust image sizes based on their aspect ratio
+            images.forEach(({ title, img }, index) => {
+                const aspectRatio = img.naturalWidth / img.naturalHeight;
+
+                let imgWidth, imgHeight;
+                if (index < 3) {
+                    // Small images
+                    imgWidth = usableWidth * 0.12;
+                    imgHeight = imgWidth / aspectRatio;
+                } else {
+                    // Large image (CAD)
+                    imgWidth = usableWidth * 0.53;
+                    imgHeight = imgWidth / aspectRatio;
+                }
+
+                // Positioning
+                const x = margin + (index < 3 ? 0 : usableWidth * 0.40);
+                const y = margin + (index % 3) * (imgHeight + 10);
+
+                // Add image and title to PDF
+                pdf.setFontSize(10);
+                pdf.text(title, x, y - 2);
+                pdf.addImage(img.src, 'JPEG', x, y, imgWidth, imgHeight, '', 'FAST');
+            });
+
+            pdf.save("photo_press_check.pdf");
+            showButtons();
         }
     </script>
 </body>
